--- a/global.css
+++ b/global.css
@@ -1,9 +1,17 @@
 body{
     display: flex;
     flex-direction: row;
-    background-color: #FBE8E7;
+    background-color: black;
 }
 a{
     text-decoration: none;
-    color: black;
+    color: fff;
+}
+h1, h3{
+    color: #ff8000;
+    font-family: 'Beyonders', sans-serif;
+    font-size: 20px;
+}
+h3{
+    color: #47c7fc;
 }
